@@ -14,6 +14,9 @@ def extLibrariesTasks = extModules.stream().map { it.getTasksByName('createExtOu
 
 dependencies {
     implementation project(':app')
+    if (fullVersion) {
+        implementation project(':cli')
+    }
     if (!useBundledJavaFx) {
         configurations.javafx.getAsFileTree().getFiles().forEach {
             implementation files(it)
@@ -69,11 +72,23 @@ jlink {
         addOptions("--add-modules", "jdk.jdwp.agent")
     }
 
+    if (fullVersion) {
+        addOptions("--add-modules", "io.xpipe.cli")
+    }
+
     launcher {
         moduleName = packageName(null)
         mainClass = packageName('Main')
         name = jpackageExecutableName
-        jvmArgs = jpackageReleaseArguments
+        jvmArgs = jpackageReleaseDaemonArguments
+    }
+
+    secondaryLauncher {
+        moduleName = packageName(null)
+        mainClass = packageName('Main')
+        name = "xpipe"
+        jvmArgs = jpackageReleaseCliArguments
+        winConsole = true
     }
 
     jpackage {
@@ -99,21 +114,6 @@ tasks.named('jlink').get().dependsOn(rootProject.getTasksByName("jar", true))
 tasks.named('jlink').get().dependsOn(extLibrariesTasks)
 
 def outputName = os.isMacOsX() ? "${jpackageExecutableName}.app/Contents/Resources" : jpackageExecutableName
-tasks.register('copyBundledExtensions', DefaultTask) {
-    dependsOn extLibrariesTasks
-    doLast {
-        for (def extProject : extModules) {
-            def dir = "${extProject.buildDir}/libs_ext"
-            if (file(dir).exists()) {
-                copy {
-                    from(dir)
-                    into "$distDir/jpackage/$outputName/extensions/${extProject.name}"
-                    include '*.jar'
-                }
-            }
-        }
-    }
-}
 
 tasks.register('prepareMacOSResources', DefaultTask) {
     doLast {
@@ -146,5 +146,3 @@ if (os.isMacOsX()) {
     jpackageImage.finalizedBy(finalizeMacOSResources)
     jpackageImage.dependsOn(prepareMacOSResources)
 }
-
-tasks.jpackage.finalizedBy(copyBundledExtensions)
